style(Stories, LocationRay): css fixes for spacing

--- a/src/components/Wheel/LocationRay/styles.scss
+++ b/src/components/Wheel/LocationRay/styles.scss
@@ -2,9 +2,6 @@
 @import "../../../styles/colors.scss";
 
 .LocationRay {
-  .WheelBar {
-    transform: translate(31%);
-  }
   .searched {
     stroke: $SearchKeyword;
     stroke-width: 0.5%;
